# hypermodern-python

./: .flake8  LICENSE  README.md  noxfile.py  pyproject.toml
src/hypermodern_python_gisandnes/: console.py  console_newer_py.txt  console_old_py.txt  wikipedia.py  wikipedia_py.txt
tests/: conftest.py  test_console.py  test_wikipedia.py  test_wikipedia_old_py.txt
