[tool.poetry]
name = "hypermodern_python_gisandnes"

description = "The hypermodern Python project, for gisandnes"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gisandnes/hypermodern_python_gisandnes"
repository = "https://github.com/gisandnes/hypermodern_python_gisandnes"
keywords = ["hypermodern"]

version = "0.1.0"
# description = ""
authors = ["Geir Inge Sandnes <geir-inge.sandnes@gjensidige.no>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.3.2"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
mypy = "^0.812"
pytype = {version = "^2021.3.10", python = "3.7"}

[tool.poetry.scripts]
hypermodern_python_gisandnes = "hypermodern_python_gisandnes.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python_gisandnes"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
